<resources>
    <string name="app_name">Background</string>
    <string name="name">José Pacheco</string>
    <string name="cargo">Technical Support</string>
    <string name="calendario">""</string>
    <string name="de_octubre_19">08 de Octubre, 1974</string>
    <string name="fono">+51 982 224 530</string>
    <string name="correo">jpachecoj@hotmail.com</string>
    <string name="cuadro">I am José Pacheco, Support Technician Specialist in Pre-press. I am currently studying at the SENATI Institute.</string>
    <string name="cumple">TODO</string>
    <string name="casita_verde">TODO</string>
    <string name="linea">TODO</string>
    <string name="sobre_correo">TODO</string>
    <string name="fondo_foto">TODO</string>
    <string name="tel_verde">fonov</string>
    <string name="casa_direcc">Lima, Perú</string>
    <string name="next">Siguientes</string>
    <string name="experience_name">Experiencie</string>
    <string name="experiencie_">logo_experiencie</string>
    <string name="background_">Background</string>
    <string name="Interest_name">Interest</string>
    <string name="Portfolio_">Portfolio</string>
    <string name="background2_">Background</string>
    <string name="educacion">Education</string>
    <string name="educa_text1">Purwadhika Startup and Coding School</string>
    <string name="educa_text2">UI/UX job Connector Program</string>
    <string name="educa_text3">2020-2021</string>
    <string name="educa_text4">Institute Teknologi Bandung</string>
    <string name="educa_text5">Bachelor of Architecture</string>
    <string name="educa_text6">2014-2018</string>
    <string name="background_2">Background</string>
    <string name="linea_parte2">TODO</string>
    <string name="linea_parte22">TODO</string>
    <string name="todo">TODO</string>
    <string name="purwadihka">TODO</string>
    <string name="fle">TODO</string>
    <string name="instituto_tek">instituto_tek</string>
    <string name="skillstext">Skills</string>
    <string name="skill_text1">Figma</string>
    <string name="skill_text2">Corel</string>
</resources>