<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Backgroud">

    <ImageView
        android:id="@+id/rect_background"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangle_1"
        tools:layout_editor_absoluteY="0dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="128dp"
        android:fontFamily="sans-serif"
        android:gravity="center|center_horizontal"
        android:text="@string/background_2"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/flecha_back"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ico_back"
        tools:layout_editor_absoluteY="24dp"
        android:contentDescription="@string/fle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_education"
        android:layout_width="400dp"
        android:layout_height="220dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="390dp"
        app:cardCornerRadius="4dp"
        app:cardMaxElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/educacion"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:contentDescription="@string/linea_parte2"
            app:srcCompat="@drawable/line_1"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            app:srcCompat="@drawable/school"
            android:contentDescription="@string/purwadihka" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="65dp"
            android:text="@string/educa_text1"
            android:textColor="#0B0000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="85dp"
            android:text="@string/educa_text2"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="105dp"
            android:text="@string/educa_text3"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="145dp"
            android:contentDescription="@string/instituto_tek"
            app:srcCompat="@drawable/institute" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="150dp"
            android:text="@string/educa_text4"
            android:textColor="#0B0000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="170dp"
            android:text="@string/educa_text5"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="190dp"
            android:text="@string/educa_text6"
            android:textSize="12sp"
            android:textStyle="bold" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_skills"
        android:layout_width="400dp"
        android:layout_height="350dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="4dp"
        app:cardMaxElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/skillstext"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:contentDescription="@string/linea_parte22"
            app:srcCompat="@drawable/line_2"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            app:srcCompat="@drawable/figma" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="65dp"
            android:text="@string/skill_text1"
            android:textColor="#0B0000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="280dp"
            android:layout_height="30dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="90dp"
            android:scaleY="2"
            android:angle="-90"
            android:progressTint="@color/azulmarino"
            android:progress="40"      />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="150dp"
            app:srcCompat="@drawable/corel" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="160dp"
            android:text="@string/skill_text2"
            android:textColor="#0B0000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="280dp"
            android:layout_height="30dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="180dp"
            android:angle="-90"
            android:progress="40"
            android:progressTint="@color/azulmarino"
            android:scaleY="2" />


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>