<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:contentDescription="@string/fondo_foto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangle_1" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_avatar"
        app:civ_border_color="#FFFCFC"
        app:civ_border_width="3dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="157dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/imageView11"
        app:layout_constraintTop_toTopOf="@id/profile_image">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="#F7000000"
            android:textDirection="firstStrong"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cargo" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="60dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cumple"
                app:srcCompat="@drawable/vector" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/de_octubre_19"
                android:textSize="11sp" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="63dp"
                android:contentDescription="@string/tel_verde"
                app:srcCompat="@drawable/telefono" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/fono"
                android:textSize="11sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/casita_verde"
                app:srcCompat="@drawable/casa" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/casa_direcc"
                android:textSize="11sp" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="63dp"
                android:contentDescription="@string/sobre_correo"
                app:srcCompat="@drawable/carta" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/correo"
                android:textSize="11sp" />

        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="14dp"
        android:contentDescription="@string/linea"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:srcCompat="@drawable/line_1"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/bloque"
        android:layout_width="331dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/cuadro"
        android:textColor="#323232"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView11" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bloque">

        <androidx.cardview.widget.CardView
            android:id="@+id/experience_card"
            android:layout_width="115dp"
            android:layout_height="110dp"
            android:layout_gravity="top|start"
            android:layout_marginStart="45dp"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="#3A91A5"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/experience_img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center|top"
                android:layout_margin="15dp"
                android:contentDescription="@string/experiencie_"
                android:src="@drawable/ic_person" />

            <TextView
                android:id="@+id/experience_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/experience_name"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/background_card"
            android:layout_width="115dp"
            android:layout_height="110dp"
            android:layout_gravity="top|end"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="45dp"
            app:cardBackgroundColor="#3A91A5"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/background_img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center|top"
                android:layout_margin="15dp"
                android:src="@drawable/background_img"
                app:srcCompat="@drawable/background_img" />

            <TextView
                android:id="@+id/background_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/background_"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/interest_card"
            android:layout_width="115dp"
            android:layout_height="110dp"
            android:layout_gravity="start|bottom"
            android:layout_marginStart="45dp"
            android:layout_marginBottom="25dp"
            app:cardBackgroundColor="#3A91A5"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/interest_img2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center|top"
                android:layout_margin="15dp"
                android:src="@drawable/interest_img"
                app:srcCompat="@drawable/interest_img" />

            <TextView
                android:id="@+id/interest_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Interest_name"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/portfolio_card"
            android:layout_width="115dp"
            android:layout_height="110dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="25dp"
            app:cardBackgroundColor="#3A91A5"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/portfolio2_img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center|top"
                android:layout_margin="15dp"
                android:src="@drawable/portfolio_img"
                app:srcCompat="@drawable/portfolio_img" />

            <TextView
                android:id="@+id/portfolio_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Portfolio_"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

